portal: fix api host
