# apispec.json
@@ -1,1 +1,156 @@
-{"definitions":{"ProvenancesSchema":{"properties":{"authors":{"description":"comma-separated list of authors","type":"string"},"description":{"description":"brief description of the project","maxLength":1500,"minLength":5,"type":"string"},"id":{"type":"string"},"project":{"description":"project name/slug (valid format: `^[a-zA-Z0-9_]+$`)","maxLength":30,"minLength":3,"type":"string"},"title":{"description":"(short) title for the project/dataset","maxLength":30,"minLength":5,"type":"string"},"urls":{"description":"list of URLs for references","properties":{"main":{"type":"string"}},"type":"object"}},"required":["authors","description","project","title","urls"],"type":"object"}},"host":"api.mpcontribs.org","info":{"contact":{"email":"phuck@lbl.gov","name":"MPContribs","url":"https://mpcontribs.org"},"description":"Operations to retrieve materials data contributed to MP","license":{"name":"Apache 2.0","url":"https://www.apache.org/licenses/LICENSE-2.0.html"},"title":"MPContribs API","version":"2019.03.02"},"paths":{"/provenances/":{"get":{"consumes":["application/json"],"description":"If a string is provided via the search parameter, `title`,         `description`, and `authors` are searched using a MongoEngine/MongoDB         text index. Provide a space-separated list to the search query         parameter to search for multiple words. For more, see         https://docs.mongodb.com/manual/text-search/.<br/>","parameters":[{"description":"string to search for in title, authors, description","in":"query","name":"search","type":"string"}],"produces":["application/json"],"responses":{"200":{"description":"list of provenance entries with fields project, title, and authors","examples":{"entries":"[ {\n    \"authors\": \"J. Vieten, B. Bulfin, D. Guban, L. Zhu, P. Huck, M. Horton, K. Persson, M. Roeb, C. Sattler\",\n    \"id\": \"5bef38a0aba702da481fe970\",\n    \"project\": \"redox_thermo_csp\",\n    \"title\": \"RedoxThermoCSP\"\n}, {\n    \"authors\": \"A.T. N`Diaye, R. Ott, A.A. Baker\",\n    \"id\": \"5bef38b1aba702da481fe971\",\n    \"project\": \"als_beamline\",\n    \"title\": \"CuCoCe Project\"\n}, ... ]"},"schema":{"items":{"$ref":"#/definitions/ProvenancesSchema"},"type":"array"}}},"summary":"Retrieve (and optionally filter) provenances.","tags":["provenances"]}},"/provenances/{project}":{"get":{"consumes":["application/json"],"parameters":[{"description":"project identifier (name/slug)","in":"path","name":"project","pattern":"^[a-zA-Z0-9_]{3,30}$","required":true,"type":"string"}],"produces":["application/json"],"responses":{"200":{"description":"provenance entry","examples":{"entry":"{\n    \"authors\": \"P. Huck, K. Persson\",\n    \"description\": \"Bandgaps calculated ... electron affinity.\",\n    \"id\": \"5bef38d9aba702da481fe974\",\n    \"project\": \"dtu\",\n    \"title\": \"GLLB-SC Bandgaps\",\n    \"urls\": { \"main\": \"https://doi.org/10.1002/aenm.201400915\" }\n}"},"schema":{"$ref":"#/definitions/ProvenancesSchema"}}},"summary":"Retrieve a project/dataset's provenance information.","tags":["provenances"]}}},"schemes":["https","http"],"security":[{"ApiKeyAuth":[]}],"securityDefinitions":{"ApiKeyAuth":{"description":"MP API key to authorize requests","in":"header","name":"X-API-KEY","type":"apiKey"}},"swagger":"2.0"}
+﻿{
+    "definitions": {
+        "ProvenancesSchema": {
+            "properties": {
+                "authors": {
+                    "description": "comma-separated list of authors",
+                    "type": "string"
+                },
+                "description": {
+                    "description": "brief description of the project",
+                    "maxLength": 1500,
+                    "minLength": 5,
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "project": {
+                    "description": "project name/slug (valid format: `^[a-zA-Z0-9_]+$`)",
+                    "maxLength": 30,
+                    "minLength": 3,
+                    "type": "string"
+                },
+                "title": {
+                    "description": "(short) title for the project/dataset",
+                    "maxLength": 30,
+                    "minLength": 5,
+                    "type": "string"
+                },
+                "urls": {
+                    "description": "list of URLs for references",
+                    "properties": {
+                        "main": {
+                            "type": "string"
+                        }
+                    },
+                    "type": "object"
+                }
+            },
+            "required": [
+                "authors",
+                "description",
+                "project",
+                "title",
+                "urls"
+            ],
+            "type": "object"
+        }
+    },
+    "host": "api.mpcontribs.org",
+    "info": {
+        "contact": {
+            "email": "phuck@lbl.gov",
+            "name": "MPContribs",
+            "url": "https://mpcontribs.org"
+        },
+        "description": "Operations to retrieve materials data contributed to MP",
+        "license": {
+            "name": "Apache 2.0",
+            "url": "https://www.apache.org/licenses/LICENSE-2.0.html"
+        },
+        "title": "MPContribs API",
+        "version": "2019.03.02"
+    },
+    "paths": {
+        "/provenances/": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "description": "If a string is provided via the search parameter, `title`,         `description`, and `authors` are searched using a MongoEngine/MongoDB         text index. Provide a space-separated list to the search query         parameter to search for multiple words. For more, see         https://docs.mongodb.com/manual/text-search/.<br/>",
+                "parameters": [
+                    {
+                        "description": "string to search for in title, authors, description",
+                        "in": "query",
+                        "name": "search",
+                        "type": "string"
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "list of provenance entries with fields project, title, and authors",
+                        "examples": {
+                            "entries": "[ {\n    \"authors\": \"J. Vieten, B. Bulfin, D. Guban, L. Zhu, P. Huck, M. Horton, K. Persson, M. Roeb, C. Sattler\",\n    \"id\": \"5bef38a0aba702da481fe970\",\n    \"project\": \"redox_thermo_csp\",\n    \"title\": \"RedoxThermoCSP\"\n}, {\n    \"authors\": \"A.T. N`Diaye, R. Ott, A.A. Baker\",\n    \"id\": \"5bef38b1aba702da481fe971\",\n    \"project\": \"als_beamline\",\n    \"title\": \"CuCoCe Project\"\n}, ... ]"
+                        },
+                        "schema": {
+                            "items": {
+                                "$ref": "#/definitions/ProvenancesSchema"
+                            },
+                            "type": "array"
+                        }
+                    }
+                },
+                "summary": "Retrieve (and optionally filter) provenances.",
+                "tags": [
+                    "provenances"
+                ]
+            }
+        },
+        "/provenances/{project}": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "description": "project identifier (name/slug)",
+                        "in": "path",
+                        "name": "project",
+                        "pattern": "^[a-zA-Z0-9_]{3,30}$",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "provenance entry",
+                        "examples": {
+                            "entry": "{\n    \"authors\": \"P. Huck, K. Persson\",\n    \"description\": \"Bandgaps calculated ... electron affinity.\",\n    \"id\": \"5bef38d9aba702da481fe974\",\n    \"project\": \"dtu\",\n    \"title\": \"GLLB-SC Bandgaps\",\n    \"urls\": { \"main\": \"https://doi.org/10.1002/aenm.201400915\" }\n}"
+                        },
+                        "schema": {
+                            "$ref": "#/definitions/ProvenancesSchema"
+                        }
+                    }
+                },
+                "summary": "Retrieve a project/dataset's provenance information.",
+                "tags": [
+                    "provenances"
+                ]
+            }
+        }
+    },
+    "schemes": [
+        "https"
+    ],
+    "security": [
+        {
+            "ApiKeyAuth": []
+        }
+    ],
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "description": "MP API key to authorize requests",
+            "in": "header",
+            "name": "X-API-KEY",
+            "type": "apiKey"
+        }
+    },
+    "swagger": "2.0"
+}
